--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "app_id": "com.moodle.moodlemobile",
-    "appname": "Brilliant Grammar High School",
-    "desktopappname": "Brilliant Grammar High School Desktop",
+    "appname": "Little Flower High School",
+    "desktopappname": "Little Flower High School Desktop",
     "versioncode": 3710,
     "versionname": "3.7.1",
     "cache_update_frequency_usually": 420000,
