Pallavi Model School Images changed
Pallavi Model School Images changed

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "app_id": "com.moodle.moodlemobile",
 
-    "appname": "EvesHighSchool",
-    "desktopappname": "EvesHighSchool",
+    "appname": "Pallavi-Model-School",
+    "desktopappname": "Pallavi-Model-School",
     "versioncode": 3710,
     "versionname": "3.7.1",
     "cache_update_frequency_usually": 420000,
