--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "app_id": "com.moodle.moodlemobile",
 
-    "appname": "Pallavi-Model-School",
-    "desktopappname": "Pallavi-Model-School",
+    "appname": "Centenary High School",
+    "desktopappname": "Centenary High School",
     "versioncode": 3710,
     "versionname": "3.7.1",
     "cache_update_frequency_usually": 420000,
