--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "app_id": "com.moodle.moodlemobile",
 
-    "appname": "Centenary High School",
-    "desktopappname": "Centenary High School",
+    "appname": "MOTHER TERESA INSTITUTE OF SCIENCE AND TECHNOLOGY",
+    "desktopappname": "MOTHER TERESA INSTITUTE OF SCIENCE AND TECHNOLOGY",
     "versioncode": 3710,
     "versionname": "3.7.1",
     "cache_update_frequency_usually": 420000,
